# optical

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  config.example.yml
.cargo/: config.toml
.github/workflows/: release.yml
crates/optical/: Cargo.toml
crates/optical-center/: Cargo.toml  build.rs
crates/optical-center/src/: main.rs
crates/optical-core/: Cargo.toml  build.rs
crates/optical-core/src/: app.rs  cli.rs  config.rs  config_manager.rs  error.rs  lib.rs  paths.rs  updater.rs  webui.rs
crates/optical-core/src/center/: client.rs  events.rs  mod.rs  proto.rs  registry.rs  server.rs  state.rs  web_admin.rs
crates/optical-core/src/crypto/: aead.rs  handshake.rs  kdf.rs  mod.rs  pqdsa.rs
crates/optical-core/src/dial/: tcp.rs  udp.rs
crates/optical-core/src/metrics/: history.rs  mod.rs
crates/optical-core/src/proto/: frame.rs  mod.rs
crates/optical-core/src/service/: linux.rs  mod.rs  windows.rs
crates/optical-core/src/transport/: kcp.rs  tcp.rs  ws.rs
crates/optical-core/src/tunnel/: client.rs  mod.rs  server.rs
crates/optical/src/: main.rs
docs/: README.md  config-center.md
src/: app.rs  config.rs  main.rs  paths.rs  updater.rs
src/admin/: mod.rs
src/crypto/: aead.rs  handshake.rs  pqdsa.rs  pqkem.rs
src/dial/: mod.rs  tcp.rs  udp.rs
src/forward/: mod.rs  reverse.rs  tcp.rs  udp.rs
src/metrics/: mod.rs
src/proto/: frame.rs  stream.rs
src/service/: linux.rs  mod.rs  windows.rs
src/transport/: kcp.rs  mod.rs  tcp.rs  ws.rs
src/tunnel/: client.rs  mod.rs  server.rs
webui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
webui/src/: App.tsx  main.tsx
webui/src/api/: client.ts  types.ts
webui/src/pages/: ConfigPush.tsx  NodeDetail.tsx  Nodes.tsx  Overview.tsx  Pending.tsx  Settings.tsx
