[package]
name = "optical"
version = "0.1.0"
edition = "2024"
description = "Post-quantum encrypted tunnel forwarding tool (ML-KEM + ML-DSA + PSK)"
license = "Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Post-quantum cryptography (pure Rust, RustCrypto)
ml-kem = { version = "0.3", features = ["getrandom"] }
ml-dsa = "0.1"
getrandom = "0.4"

# Symmetric crypto
chacha20poly1305 = "0.10"
sha2 = "0.10"
hkdf = "0.12"
hmac = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
bytes = "1"
hex = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Misc
futures = "0.3"
zeroize = { version = "1", features = ["derive"] }

# Platform-specific: Windows Service Control Manager integration
[target.'cfg(windows)'.dependencies]
windows-service = "0.8"
