# Workspace root. Members are defined in each crate's Cargo.toml.
# This file declares the workspace, the shared release profile, and the
# member crates. Individual dependency versions live in each member's
# Cargo.toml.

[workspace]
members = [
    "crates/optical-core",
    "crates/optical",
    "crates/optical-center",
]
resolver = "3"

# Shared optimized profile used for Release distribution (GitHub Actions).
# Fat LTO + single codegen unit: maximizes cross-crate inlining (beneficial
# for the crypto-heavy workload: ML-KEM/ML-DSA/ChaCha20-Poly1305) and reduces
# binary size, at the cost of ~5-10x longer compile time. Local dev uses
# debug/release.
[profile.release-perf]
inherits = "release"
lto = "fat"
codegen-units = 1
